# PikaC

./: .gitignore  CHANGELOG.md  Dockerfile  Main.hs  Pika.rkt  PikaC.cabal  PikaC.prof  README.md  benchmarkPlotLib.py  cabal.project.local  counterexample.pika  eq_test.c  notes-id_Dll.txt  oldghc.sh  pika.sh  run-benchmarks.sh  run-tests.sh  suslik-issues.md  test.c  test2.c  test3.c  test4.c  tests-baseline.txt  tests-less-indirection.txt  tests-todo.md
future-tests/: fibArray.pika  fibPacked.pika  sumPacked.pika
new-paper/: conclusion.tex  defs.tex  examples.tex  introduction.tex  layouts.tex  limitations.tex  overview.tex  paper.bib  paper.tex  related-work.tex  selected-rules.tex  semantics.tex  soundness-diagram.tex  suslik-extensions.tex  syntax.tex  synth.tex
old/: README.md
old-golden-files/: add1Head.golden  append.golden  filterLt7.golden  fractran.golden  mapAdd.golden  maximum.golden  mutation.golden  plus.golden  reverse.golden  sum.golden
old-property-test-counterexamples/: counterexample.pika  counterexample2.pika  exponentialMemoryLayout.pika
outline/: defs.tex  outline.bbl  outline.blg  outline.tex  pipeline.tex
paper/: codegen.tex  defs.tex  elaboration.tex  introduction.tex  language.tex  overview.tex  paper.bbl  paper.blg  paper.tex  pipeline.tex  semantics.tex  types.tex
src/: Bench.hs  Main.hs
src/PikaC/: Equality.hs  FreshGen.hs  Ppr.hs  Stage.hs  Subst.hs  Utils.hs
src/PikaC/Backend/: Utils.hs
src/PikaC/Backend/C/: CodeGen.hs  DataDeps.hs  Monad.hs  Syntax.hs
src/PikaC/Backend/SuSLik/: CodeGen.hs  Invoke.hs  Syntax.hs
src/PikaC/Backend/SuSLik/SuSLang/: Parser.hs  Syntax.hs  ToC.hs
src/PikaC/Benchmark/: Benchmark.hs
src/PikaC/Preorder/: Preorder.hs
src/PikaC/Stage/: ToPikaCore.hs
src/PikaC/Stage/Defunctionalize/: Defunctionalize.hs  Mangle.hs
src/PikaC/Stage/ToPikaCore/: AssertionOfAssertion.hs  AssertionOfCall.hs  BaseAppToWith.hs  CallOfCall.hs  CallOfWith.hs  FloatWith.hs  LayoutToWith.hs  LayoutVOne.hs  Monad.hs  NestedCalls.hs  RenameResultLayout.hs  ReplaceClosedAssertions.hs  ReuseExistingPtrs.hs  Simplify.hs  SimplifyM.hs  SubstWithLayoutVar.hs  Utils.hs  WithLayoutV.hs  WithOfWith.hs  WithSubst.hs
src/PikaC/Syntax/: Expr.hs  Heaplet.hs  ParserUtils.hs  Type.hs
src/PikaC/Syntax/Pika/: Expr.hs  FnDef.hs  Layout.hs  Parser.hs  Pattern.hs
src/PikaC/Syntax/PikaCore/: Expr.hs  FnDef.hs  Layout.hs  Parser.hs
src/PikaC/Syntax/Type/: Parser.hs
src/PikaC/Tests/: C.hs  Module.hs
src/PikaC/Tests/Pika/: Golden.hs  Printer.hs  Run.hs  Test.hs
src/PikaC/TypeChecker/: Elaborate.hs  Mode.hs  Monad.hs  Unify.hs
suslik-code/: add1Head.sus  cons1.sus  equal.sus  equal2.sus  findMin.sus  heap.sus  revcat.sus
temp/tests15594-1.dSYM/Contents/: Info.plist
temp/tests15594-1.dSYM/Contents/Resources/DWARF/: tests15594-1
temp/tests15920-1.dSYM/Contents/: Info.plist
temp/tests15920-1.dSYM/Contents/Resources/DWARF/: tests15920-1
tests/: add1Head.golden  add1Head.pika  add1HeadDLL.golden  add1HeadDLL.pika  add1HeadDll.pika  anagram.golden  anagram.pika  append.pika  append.sus  cons.golden  cons.pika  cons.sus  even.golden  even.pika  fact.golden  fact.pika  filterLt.golden  filterLt.pika  filterLt7.golden  filterLt7.pika  foldr.golden  foldr.pika  heap.golden  heap.pika  leftList.golden  leftList.pika  listId.golden  listId.pika  mapAdd.golden  mapAdd.pika  mapAdd1.golden  mapAdd1.pika  mapAddDefun.golden  mapAddDefun.pika  mapAddDll.pika  maximum.pika  mutation.pika  plus.golden  plus.pika  reverse.pika  (+10 more)
tests-failing/: anagram.pika  append.pika  collatz.pika  fact.pika  mutation.pika
tests-future/: findPacked.pika  fractran.pika  plus.pika
tests/c/: config.dhall
tests/c-layouts/: NatLayout.c  NatLayout.h  Sll.c  Sll.h
tests/c/common/: common.h  generators.h
tests/common/: common.h
tests/future/: collatz.pika  fibArray.pika  fibPacked.pika  fractran.pika  sumPacked.pika
tests/haskell/: Common.hs  Defaults.hs  FilterLt.hs  LeftList.hs  MapAdd.hs  Sum.hs  Take.hs  TreeSize.hs
tests/old/: cons.pika
various/old-c-stuff/: mutation.c  test.c
various/old-c-stuff/c/: listConvert.c
various/old-c-stuff/c-layouts/: NatLayout.h  Sll.c
various/suslik-code/: cons2.sus  reverse.sus  reverse1.sus
writing/new-paper/: conclusion.tex  examples.tex  extended-soundness.tex  future-work.tex  overview.tex  paper.tex  related-work.tex  results.tex  soundness.tex  suslik-extensions.tex
writing/notes-on-pikac/: introduction.tex  language.tex  paper.tex  pipeline.tex  refs.bib  semantics.tex  types.tex
writing/outline/: Makefile
writing/pldi2024pika/: alex.bib  main.tex
