cabal-version:      2.4
name:               PikaC
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             David Young
maintainer:         roboguy06@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable PikaC
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      PikaC.TypeChecker.Mode
      PikaC.Backend.C.CodeGen
      PikaC.Backend.C.Monad
      PikaC.Backend.C.Syntax
      PikaC.Backend.SuSLik.Syntax
      PikaC.Backend.SuSLik.CodeGen
      PikaC.Backend.Utils
      -- PikaC.Backend.C.DataDeps
      PikaC.Ppr
      PikaC.Syntax.ParserUtils
      PikaC.Syntax.Heaplet
      PikaC.Syntax.PikaCore.Expr
      PikaC.Syntax.PikaCore.FnDef
      PikaC.Syntax.PikaCore.Parser
      PikaC.Syntax.Pika.Pattern
      PikaC.Syntax.Pika.Layout
      PikaC.Syntax.Pika.Expr
      PikaC.Syntax.Pika.FnDef
      PikaC.Syntax.Pika.Parser
      PikaC.Syntax.Type
      PikaC.Syntax.Type.Parser
      PikaC.Stage.ToPikaCore
      PikaC.Stage.ToPikaCore.Simplify
      PikaC.Stage.ToPikaCore.SubstWithLayoutVar
      PikaC.Stage.ToPikaCore.NestedCalls
      PikaC.Stage.ToPikaCore.WithOfWith
      PikaC.Stage.ToPikaCore.RenameResultLayout
      PikaC.Stage.ToPikaCore.LayoutToWith
      PikaC.Stage.ToPikaCore.WithLayoutV
      PikaC.Stage.ToPikaCore.CallOfWith
      PikaC.Stage.ToPikaCore.WithSubst
      PikaC.Stage.ToPikaCore.ReuseExistingPtrs
      PikaC.Stage.ToPikaCore.ReplaceClosedAssertions
      PikaC.Stage.ToPikaCore.CallOfCall
      PikaC.Stage.ToPikaCore.AssertionOfCall
      PikaC.Stage.ToPikaCore.AssertionOfAssertion
      PikaC.Stage.ToPikaCore.Monad
      PikaC.Stage.ToPikaCore.Utils
      PikaC.Stage.ToPikaCore.SimplifyM
      PikaC.Stage
      PikaC.Tests.Module
      PikaC.Tests.C
      PikaC.Tests.Pika.Test
      PikaC.Tests.Pika.Printer
      PikaC.Utils
      PikaC.Subst
      PikaC.FreshGen


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      containers,
                      mtl,
                      pretty,
                      bound,
                      unbound-generics,
                      deriving-compat,
                      mmorph,
                      lens,
                      lens-action,
                      megaparsec,
                      text,
                      hedgehog,
                      validity,
                      genvalidity,
                      QuickCheck,
                      deepseq,
                      process,
                      directory,
                      bifunctors,
    hs-source-dirs:   src
    default-language: GHC2021
